@@ -306,3 +306,7 @@ Remove ITV Encore HD from whitelist/swap
 
 2017-03-18
 Alter International range
+
+2017-04-12
+allow reassign channel position via channel_id reference
+
